Method for inserting into QFlatSet now returns index along with the iterator

Something strange was happening in Plasma where iterator - begin was
sometimes returning an invalid value.

BUG:365610